# InfinityGeist

./: .gitignore  CLAUDE.md  Justfile  README.md  TASKS_STATUS.md  geist_dev_plan.html
.claude/: PROYECTO.md  settings.json
.claude/agents/: adversarial-review.md  backend-developer.md
.claude/commands/: commit.md  enrich-us.md  explain.md  update-docs.md
.claude/commands/opsx/: archive.md
.claude/us/: README.md  TAR-01b Chunking + canonical_rule_id.md
docs/: base-standards.md
docs/adr/: ADR-002-pdf-extractor-license.md
ingestion/src/geist_ingestion/: __main__.py  extract.py
openspec/changes/archive/2026-07-02-tar-02-indexing-embeddings/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-02-tar-02-indexing-embeddings/specs/e5-embedding-wrapper/: spec.md
openspec/changes/archive/2026-07-02-tar-02-indexing-embeddings/specs/incremental-indexing/: spec.md
openspec/specs/vector-indexing/: spec.md
services/api/: pyproject.toml
services/api/services/api/src/geist_api/indexing/: chroma_client.py  embedder.py
services/api/services/api/tests/integration/: test_chroma_persistence.py
services/api/services/api/tests/unit/: test_embedder.py
services/api/src/geist_api/: __init__.py  settings.py
services/api/src/geist_api/cli/: index.py
services/api/src/geist_api/indexing/: indexer.py
services/api/tests/fixtures/: smoke_chunks.jsonl  test_chunks.jsonl
services/api/tests/integration/: test_incremental_indexing.py  test_indexing_smoke.py
services/api/tests/unit/: test_indexer.py
shared/geist_shared/: __init__.py  chunk_models.py
